# blackbeard

./: .clang-format  .gitignore  CMakeLists.txt  README.md  toolchain-windows.cmake
.github/workflows/: cmake-multi-platform.yml
cmake/: add.cmake  cfg.cmake  platform_win32.cmake
intern/: CMakeLists.txt
intern/atomic/: CMakeLists.txt
intern/datatoc/: CMakeLists.txt  datatoc.c
intern/guardedalloc/: CMakeLists.txt
intern/guardedalloc/intern/: guarded_impl.c  linklist.c  linklist.h
intern/guardedalloc/intern/utils/: memleak.cc  memusage.cc
intern/mom/: CMakeLists.txt  mom.h
intern/mom/intern/: mom.c  mom_internal.h
intern/mom/test/: disk.cc  local_memory.cc  mom.cc  other_memory.cc
intern/mom/unix/: unixmom.h
intern/mom/windows/: winevent.c  winmodule.c  winmom.h  winprocess.c  winthread.c
intern/testing/: CMakeLists.txt  test_main.cc
intern/utils/: CMakeLists.txt  defines.h  list.c  list.h
lib/: CMakeLists.txt  config.h  list.c  list.h  spoof.asm  spoof.c  spoof.h  variadic.h  xorstr.hh
source/: CMakeLists.txt  mapper.cc  mapper.h  module.c  module.h  native.c  native.h  process.c  remote.h  thread.h
source/bob/: CMakeLists.txt  manualmap.h  remote.h
source/bob/intern/: manualmap.c  remote.cc
source/bob/test/: bonus.c  manualmap.cc
source/intern/: list.c
src/: CMakeLists.txt  mapper.cc  mmap.cc  mmap.h  mod.c  mod.h  native.c  native.cc  native.h  proc.c  proc.h  process.h  remote.cc  remote.h  thread.c  thread.h
src/intern/: config.h  list.c
tools/: CMakeLists.txt
tools/memallocdll/: CMakeLists.txt  memallocdll.cc
tools/testdll1/: CMakeLists.txt  testdll1.c
tools/testdll2/: CMakeLists.txt  testdll2.cc
tools/testdll3/: CMakeLists.txt  testdll3.cc
tools/xorstrdll/: CMakeLists.txt  xorstrdll.cc
