# -----------------------------------------------------------------------------
# Define Include Directories

set(INC
	# Internal Include Directories
	PUBLIC .
	PRIVATE ..
	
	# External Include Directories
	
)

# -----------------------------------------------------------------------------
# Define System Include Directories

set(INC_SYS
	# External System Include Directories
	
)

# -----------------------------------------------------------------------------
# Define Source Files

set(SRC

)

# -----------------------------------------------------------------------------
# Define Library Dependencies

set(LIB
	# Internal Library Dependencies
	PUBLIC bb_utils
	
	# External Library Dependencies
	
)

# -----------------------------------------------------------------------------
# Declare Library

# add_library(bb ${SRC})
# target_include_directories(bb ${INC} ${INC_SYS})
# target_link_libraries(bb ${LIB})
